--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -24,15 +24,15 @@
     </div>
     <div class="thank-you-offer">
         {% csrf_token %}
-        <h3>СПЕЦИЈАЛНА ПОНУДА</h3>
-        <h5>Нарачај го истиот производ и заштеди дополнителни 21%</h5>
+        <h3>СПЕЦИЈАЛНА ПОНУДА САМО ДЕНЕС</h3>
+        <h5>Нарачај го истиот производ и заштеди дополнителни 20%</h5>
         <div class="offer-box">
         <input type="hidden" class="order_id" value="{{ order.id }}">
         <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
         <img src="{{ offerproduct.product.thumbnail.url }}" alt="" width="250" height="250">
         {% if offerproduct.attribute_name  %}
         <p class="offer-ttl">{{ offerproduct.product.title }} - {{offerproduct.attribute_name}}</p>
-        <p class="rgl_price">{{ offerproduct.product.regular_price }} ден</p>
+        <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>
         <p class="sl_price">{{ offerproduct.attribute_price }} ден</p>
         <p class="offer-save">ДОПОЛНИТЕЛНИ 20% ЗАШТЕДА</p>
         <button class="offer-button">НАРАЧАЈ</button>
