--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -47,7 +47,7 @@
                     <input type="text" required name="address"></li>
 
                     <li><label for="city">Град/Село <abbr title="required" class="required">*</abbr></label>
-                    <input type="hidden" required name="city" placeholder="Одберете град" class="checkout-city">
+                    <input type="hidden" required name="city" placeholder="Одберете град" class="checkout-city" value="Undefined">
                     <div class="dropdownsearch">
                         <div class="options">
                           <select name="" id="dynamic_select">              
