--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -6,6 +6,15 @@
                 <a href="{% url 'product-page' product.slug  %}" class="product-link" aria-label="Линк до продукт">
                 <img src="{{ product.thumbnail_loop.url }}" alt="Product image" width="250" height="250" class="product-feed-thumbnail">
                 <h2 class="product-feed-title">{{ product.title }}</h2>
+                {% if product.review_average > 0 %}
+                <div class="rating rating{{ product.review_average}} list-ratings">
+                    <span class="star1"></span>
+                    <span class="star2"></span>
+                    <span class="star3"></span>
+                    <span class="star4"></span>
+                    <span class="star5"></span>
+                </div>
+                {% endif %}
                 <span class="product-feed-price"><p class="product-feed-regular-price">{{ product.regular_price }} ден</p><p class="product-feed-sale-price">{{ product.sale_price }} ден</p></span>
                 </a>
                 <button data-product={{ product.id }} data-action="add" class="add-to-cart update-cart">ВО КОШНИЧКА</button>
