--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -1461,6 +1461,7 @@ select {
     margin-bottom: 5px;
     border-radius: 10px;
     font-weight: 500;
+    padding-left: 10px;
 
 }
 .delivery-day{
