--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -107,6 +107,20 @@
         <button class="add-to-cartBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
         <button class="proceed-to-checkout add-to-cartBtn">НАРАЧАЈ ВЕДНАШ</button>
         {% endif %}
+    <div class="badges-wrapper">
+        <div class="badge-item">
+            <img src="{% static 'icons/delivery-badge.svg' %}" alt="" class="badge" width="50" height="50">
+            <p class="badge-text">1-3 дена достава</p>
+        </div>
+        <div class="badge-item">
+            <img src="{% static 'icons/exchange-badge.svg' %}" alt="" class="badge" width="50" height="50">
+            <p class="badge-text">15 дена рок на замена</p>
+        </div>
+        <div class="badge-item">
+            <img src="{% static 'icons/refundation-badge.svg' %}" alt="" class="badge" width="50" height="50">
+            <p class="badge-text">рефундација</p>
+        </div>
+    </div>
         
     
     <div class="toggle">
