--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -889,74 +889,6 @@ select {
     width: auto!important;
     height: auto!important;
 }
-/* slider */
-.slider-wrapper {
-    margin: 1rem;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding-top: 50px;
-    
-  }
-
-  .slides-container {
-    width: 100%;
-    /* width: 100%; ##PC##*/
-    display: flex;
-    overflow: hidden;
-    scroll-behavior: smooth;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  .slide-arrow {
-    position: absolute;
-    display: flex;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    height: 5rem;
-    background-color: white;
-    border: 1px solid #abaeb4;
-    width: 2rem;
-    font-size: 3rem;
-    padding: 0;
-    cursor: pointer;
-    opacity: 0.5;
-    touch-action: manipulation;
-    transition: opacity 200ms;
-    border-radius: 5px;
-  }
-
-  .slide-arrow:hover,
-  .slide-arrow:focus {
-    opacity: 1;
-    box-shadow: 1px 1px 4px 0px #888888;
-  }
-
-  .slide-arrow-prev {
-    padding-top: 0.3rem;
-    padding-left: 0.4rem;
-  }
-
-  .slide-arrow-next {
-    right: 0;
-    padding-top: 0.3rem;
-    padding-left: 0.6rem;
-
-  }
-
-  .slide {
-    width: 500px;
-    height: 50%;
-    flex: 1 0 25%; 
-    text-align: center;
-    /* flex: 1 0 50%; ##PHONE##  */
-    /* flex: 1 0 25%; ##PC##  */
-
-  }
-
   /* Stocks Container  */
   .last-stocks-container-function-wrapper {
     display: flex;
@@ -977,9 +909,7 @@ select {
     object-fit: contain;
     height: 250px;
   }
-  .slide .sliderBtn{
-    width: auto;
-  }
+
   .slide .slider-title{
     height: 90px;
   }
@@ -1342,6 +1272,374 @@ select {
 .col-1.product-page{
     padding: 10px;
     flex-basis: 46%;
+    width: 49%;
+}
+.slick-slider
+{
+    position: relative;
+
+    display: block;
+    box-sizing: border-box;
+
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+
+    display: block;
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+
+    height: auto;
+
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+/* Slider */
+.slick-loading .slick-list
+{
+    background: #fff url('./ajax-loader.gif') center center no-repeat;
+}
+
+/* Icons */
+
+/* Arrows */
+.slick-prev,
+.slick-next
+{
+    font-size: 0;
+    line-height: 0;
+
+    position: absolute;
+    top: 50%;
+
+    display: block;
+
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+
+    cursor: pointer;
+
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus
+{
+    color: transparent;
+    outline: none;
+    background: transparent;
+}
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before
+{
+    opacity: 1;
+}
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before
+{
+    opacity: .25;
+}
+
+.slick-prev:before,
+.slick-next:before
+{
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 1;
+
+    opacity: .75;
+    color: white;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev
+{
+    left: 5px;
+    z-index: 1
+}
+[dir='rtl'] .slick-prev
+{
+    right: -25px;
+    left: auto;
+}
+.slick-prev:before
+{
+    content: '←';
+}
+[dir='rtl'] .slick-prev:before
+{
+    content: '→';
+}
+
+.slick-next
+{
+    right: 10px;
+
+}
+[dir='rtl'] .slick-next
+{
+    right: auto;
+    left: -25px;
+}
+.slick-next:before
+{
+    content: '→';
+}
+[dir='rtl'] .slick-next:before
+{
+    content: '←';
+}
+
+/* Dots */
+.slick-dots
+{
+    position: absolute;
+    bottom: 5px;
+    display: block;
+
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+
+    text-align: center;
+}
+.slick-dots li
+{
+    position: relative;
+
+    display: inline-block;
+
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    padding: 0;
+
+    cursor: pointer;
+}
+.slick-dots li button
+{
+    font-size: 0;
+    line-height: 0;
+
+    display: block;
+
+    width: 10px;
+    height: 10px;
+    padding: 5px;
+
+    cursor: pointer;
+
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: var(--black);
+    border-radius: 50%;
+    opacity: 0.5;
+}
+.slick-dots .slick-active button{
+    opacity: 1;
+}
+.slick-dots li button:hover,
+.slick-dots li button:focus
+{
+    outline: none;
+}
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before
+{
+    opacity: 1;
+}
+.slick-dots li button:before
+{
+    font-family: 'slick';
+    font-size: 6px;
+    line-height: 20px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 10px;
+    height: 10px;
+
+    content: '•';
+    text-align: center;
+
+    opacity: .25;
+    color: black;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.slick-dots li.slick-active button:before
+{
+    opacity: 1;
+    color: black;
+}
+.slick-next::before{
+    background: url(http://127.0.0.1:8000/static/icons/chevron-right.svg) no-repeat;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+}
+.slick-prev::before{
+    background: url(http://127.0.0.1:8000/static/icons/chevron-left.svg) no-repeat;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    
+}
+
+.slider-wrapper{
+    width: 100%;
+    text-align: center;
+}
+.slider-wrapper .slick-prev, .slider-wrapper .slick-next{
+    border: 1px solid #abaeb4;
+    height: 85px;
+    width: 30px;
+    border-radius: 5px;
+    top: 40%;
+    background: white;
+    opacity: 0.8
+}
+.slider-wrapper .slick-prev::before, .slider-wrapper .slick-next::before{
+    margin-left: 5px;
+}
+.slider-wrapper .slick-prev:hover,.slider-wrapper .slick-prev:focus,.slider-wrapper .slick-next:hover{
+    opacity: 1;
+}
+.slider-holder{
+    top: 0px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease;
+    -webkit-transition: opacity 1s ease;
+}
+#slider2, #slider3{
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease;
+    -webkit-transition: opacity 1s ease;
+}
+.slider-holder.slick-initialized, #slider2.slick-initialized, #slider3.slick-initialized {
+    visibility: visible;
+    opacity: 1;    
 }
 .phone-sticky{
     position: sticky;
@@ -1368,77 +1666,7 @@ select {
     display: none;
     z-index: 999;
 }
-.slider-holder{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
-}
-.wrapper{
-    max-width: 600px;
-    position: relative;
-   }
-.wrapper button{
-    font-size: 52px;
-    text-align: center;
-    line-height: 46px;
-    background: transparent;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    position: absolute;
-    color: #0f0f0f;
-    border: 0;
-    cursor: pointer;
-}
 
-.wrapper button:first-child{
-    left: 5px
-}
-.wrapper button:last-child{
-    right: 5px;
-}
-.wrapper .carousel{
-    font-size: 0px;
-    overflow: hidden;
-    white-space: nowrap;
-    scroll-behavior: smooth;
-   }
-.carousel.dragging{
-    cursor: grab;
-    scroll-behavior: auto;
-}
-.carousel.dragging img{
-    pointer-events: none;
-}
-.carousel img{
-    height: 600px;
-    object-fit: cover;
-    width: 100%;
-   } 
-.carousel img:first-child{
-    margin-left: 0px;
-   }
-.slick{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    margin-bottom: -10px;
-    position:relative;
-    bottom: 15px;
-}
-.slick-item{
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: var(--black);
-    padding-right: 5px;
-    opacity: 0.4;
-}
-.slick-item.active{
-    opacity: 1;
-}
 .col-2.product-page{
     padding: 10px;
     flex-basis: 46%;
@@ -2009,7 +2237,7 @@ select {
 
 @media(min-width: 767px){
     .slider-holder{
-        position: sticky;
+        position: sticky!important;
         top: 0px;
     }
     .mobile{
@@ -2301,6 +2529,17 @@ select {
     }
     .badge-text{
         min-height: 30px;
+    }
+     .slick-next{
+        right: 0;
+    }
+    .slider-wrapper .slick-prev, .slider-wrapper .slick-next{
+        border: 1px solid #abaeb4;
+        border-radius: 5px;
+        top: 20%;
+    }
+    .slider-wrapper .slick-next{
+        right: 5px;
     }
 }
 
