--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -4,29 +4,11 @@
 <div class="content-container product-page">
 <a href="tel:071321312" class="phone-sticky mobile"><span>ЈАВИ СЕ И НАРАЧАЈ <img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16" style="-webkit-transform: scaleX(-1);transform: scaleX(-1);"></span></a>
 <div class="col-1 product-page">
-    <div class="slider-holder">
-        
-
-         <div class="wrapper">
-            <button id="left" class="main_sliderBtn">&#8249;</button>
-            <div class="carousel">
-                    <img src="{{ product.thumbnail.url }}" alt="img" draggable="false" width="600" height="600">
+        <div class="slider-holder">
                     {% for img in gallery %}
-                    <img src="{{ img.galleryimg.url }}" alt="img" draggable="false" width="600" height="600">
-                    {% endfor %}
-                
-            </div>
-            <div class="slick">
-                <div class="slick-item"></div>
-                {% for img in gallery %}
-                <div class="slick-item"></div>
-                {% endfor %}
-            </div>
-            <button id="right" class="main_sliderBtn">&#8250;</button>
+                    <div><img src="{{ img.galleryimg.url }}" alt="slider image"></div>
+                    {% endfor %} 
         </div>
-       
-        
-   </div> 
 </div>
 <div class="col-2 product-page product_data">
     
@@ -195,11 +177,9 @@
     
     <section class="slider-wrapper slider-wrapper1" style="display:none">
         <h3 class="slide-title">ПОСЛЕДНИ КОЛИЧИНИ</h3>
-        <button class="slide-arrow slide-arrow-prev slide-arrow-prev1">&#8249;</button>
-        <button class="slide-arrow slide-arrow-next slide-arrow-next1">&#8250;</button>
-        <ul class="slides-container slides-container1">
+        <div id="slider2">
         {% for item in slider1 %}
-          <li class="slide product_data">
+          <div class="slide product_data">
             <input type="hidden" class="prod_id" value="{{ item.id }}">
             <a href="{% url 'product-page' item.slug %}" class="product-link slider-product-link" aria-label="Линк до продукт">
             <div class="last-stocks-sub-container">
@@ -218,17 +198,15 @@
               </a>
               <button class="add-to-cartBtn sliderBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
             </div>          
-          </li>
+          </div>
         {% endfor %}  
-        </ul>
+        </div>
     </section>
     <section class="slider-wrapper slider-wrapper2">
         <h3 class="slide-title">СЛИЧНИ ПРОИЗВОДИ</h3>
-        <button class="slide-arrow slide-arrow-prev slide-arrow-prev2">&#8249;</button>
-        <button class="slide-arrow slide-arrow-next slide-arrow-next2">&#8250;</button>
-        <ul class="slides-container slides-container2">
+        <div id="slider3">
         {% for item in slider2 %}
-          <li class="slide product_data">
+          <div class="slide product_data">
             <input type="hidden" class="prod_id" value="{{ item.id }}">
             <a href="{% url 'product-page' item.slug %}" class="product-link slider-product-link" aria-label="Линк до продукт">
             <div class="last-stocks-sub-container">
@@ -248,9 +226,9 @@
               <button class="add-to-cartBtn sliderBtn"><span class="btn-text">ВО КОШНИЧКА</span><span class="load-spinner open-spinner"></span></button>
             </div>
             
-          </li>
+          </div>
         {% endfor %}  
-        </ul>
+        </div>
     </section>
 </div>
 
@@ -262,5 +240,6 @@
 
 {% endblock content %}
 {% block scripts %}
+<script src="{% static 'shop/js/slick.min.js' %}"></script>
 <script src="{%  static 'shop/js/slider_minified.js' %}"></script>
 {% endblock scripts %}
