--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -889,6 +889,9 @@ select {
     width: auto!important;
     height: auto!important;
 }
+.toggle-content.main-toggle {
+    display: block;
+}
   /* Stocks Container  */
   .last-stocks-container-function-wrapper {
     display: flex;
