--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -2513,6 +2513,7 @@ select {
     .col-1.product-page{
         padding: 0;
         flex-basis: 100%;
+	height: 100vw;
     }
     .col-2.product-page{
         padding-top: 0;
