--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -1,9 +1,11 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% block content %}
+<style>#overlay-loader{position:absolute;height:559px;width:550px;z-index:100;background:#fff;display:flex;align-items:center;justify-content:center}@media (max-width:767px){#overlay-loader{width:100%;height:100vw}}#overlay-loader img{width:40px;height:40px}</style>
 <div class="content-container product-page">
 <a href="tel:071321312" class="phone-sticky mobile"><span>ЈАВИ СЕ И НАРАЧАЈ <img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16" style="-webkit-transform: scaleX(-1);transform: scaleX(-1);"></span></a>
 <div class="col-1 product-page">
+        <div id="overlay-loader" style=""><img src="https://greengoshop.mk/static/icons/5.svg" width="40" height="40"></div>
         <div class="slider-holder">
                     {% for img in gallery %}
                     <div><img src="{{ img.galleryimg.url }}" alt="slider image"></div>
