--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -12,6 +12,8 @@
                     <div><img src="{{ img.galleryimg.url }}" alt="slider image"></div>
                     {% endfor %} 
         </div>
+        <div class="gallery-navigation desktop">
+        </div>
 </div>
 <div class="col-2 product-page product_data">
     
