--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p>ДОСТАВАТА ЗА РЕОН ЌИСЕЛА ВОДА Е 7 ДЕНА</p></section>
+<section class="header-info"><p>СИТЕ НАРАЧКИ ОД 30.12.2022 ДО 08.01.2023 ЌЕ БИДАТ ИСПРАТЕНИ НА 09.01.2022 (ПОНЕДЕЛНИК)</p></section>
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
